@@ -23,7 +23,7 @@
 
 /**
 * @test
-* @bug 8370691
+* @bug 8370691 8391717
 * @summary Test intrinsification of Float16Vector operations
 * @modules jdk.incubator.vector
 * @library /test/lib /
@@ -61,6 +61,9 @@ public class TestFloat16VectorOperations {
         TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=16");
         TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=32");
         TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:MaxVectorSize=64");
+
+        // Test with FMA instructions disabled
+        TestFramework.runWithFlags("--add-modules=jdk.incubator.vector", "-XX:-UseFMA");
     }
 
     static void assertResults(int arity, short ... values) {
@@ -299,8 +302,10 @@ public class TestFloat16VectorOperations {
 
     @Test
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     void vectorFmaFloat16() {
         int i = 0;
@@ -332,8 +337,10 @@ public class TestFloat16VectorOperations {
 
     @Test
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     void vectorFmaFloat16ScalarMixedConstants() {
         int i = 0;
@@ -366,8 +373,10 @@ public class TestFloat16VectorOperations {
 
     @Test
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     void vectorFmaFloat16MixedConstants() {
         short input3 = floatToFloat16(3.0f);
@@ -401,8 +410,10 @@ public class TestFloat16VectorOperations {
 
     @Test
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureOr = {"avx512_fp16", "true", "zvfh", "true", "sve", "true"})
     @IR(counts = {IRNode.FMA_VHF, " >0 "},
+        applyIf = {"UseFMA", "true"},
         applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"})
     void vectorFmaFloat16AllConstants() {
         short input1 = floatToFloat16(1.0f);
